# game-engine

./: .gitignore  CMakeLists.txt
cmake/: FindGLFW.cmake
res/: config.lua
res/Shaders/: lamp.frag  lighting.frag  lighting.vert  simple.frag  simple.vert
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  Command.hpp  Cube.cpp  Cube.hpp  CubeMesh.cpp  CubeMesh.hpp  EcsSettings.hpp  Entity.hpp  Game.cpp  Game.hpp  InputHandler.cpp  InputHandler.hpp  Light.cpp  Light.hpp  LightEntity.cpp  Material.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp  main.cpp  test.cpp
src/Components/: CDirLight.hpp  CMaterial.hpp  CMesh.hpp  CPointLight.hpp  CPosition.hpp
src/Entities/: Cube.cpp  Cube.hpp  LightEntity.hpp
src/Processors/: PDirLight.hpp  PLampRenderer.hpp  PLightRenderer.hpp  PMeshRenderer.hpp  PPointLight.hpp
src/Shaders/: simple.frag  simple.vert
